修复MiniProfiler无法正常使用问题

--- a/Saki.TemplateWebProject.v2/Pages/_ViewImports.cshtml
+++ b/Saki.TemplateWebProject.v2/Pages/_ViewImports.cshtml
@@ -1,5 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using Saki.TemplateWebProject.v2
 @using Saki.TemplateWebProject.v2.Data
+@using StackExchange.Profiling
 @namespace Saki.TemplateWebProject.v2.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, MiniProfiler.AspNetCore.Mvc
